--- a/01.css-introduction/start-css.html
+++ b/01.css-introduction/start-css.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Start CSS</title>
+    <style>
+        /*
+        css comments
+        css selector [tag,attaribute,class(.),id(#)]
+        */
+        p {
+            color: red;
+        }
+
+        input[type='text'] {
+            width: 40%;
+            height: 40px;
+        }
+
+        .msg {
+            text-align: center;
+        }
+
+        .txt {
+            font-size: 2rem;
+        }
+
+        #msg {
+            text-align: right;
+        }
+
+        #txt {
+            font-size: 2rem;
+        }
+    </style>
+
+</head>
+
+<body>
+    <!--
+        tag
+        attribute style 
+        height=100px
+        height : 100px
+     -->
+    <h1 style="color:red; text-align:center; background: royalblue;">Welcome to css </h1>
+    <h2 style="color:white; text-align:center; background: red;">Lorem ipsum dolor sit amet.</h2>
+    <p class="msg txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, soluta.</p>
+    <p class="msg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, soluta.</p>
+    <p class="txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, soluta.</p>
+    <p class="txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, soluta.</p>
+    <p id="msg txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, soluta.</p>
+    <p id="msg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, soluta.</p>
+    <input type="text">
+    <input type="submit">
+
+
+
+
+</body>
+
+</html>
