--- a/07.css-position/profile.html
+++ b/07.css-position/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *{ margin: 0;}
+        *{ margin: 0; padding:0;}
         .profile{
             width: 100%;
             height: 600px;
